--- a/docs/style.css
+++ b/docs/style.css
@@ -6,18 +6,28 @@ body {
     padding: 2cm;
 }
 
-a {
+nav a,
+.jp-RenderedHTMLCommon nav a {
+    font-size: 1.2em;
     color: white;
     text-decoration: none;
+    display: inline-block;
+    background-color: #dc143c;
+    padding: 0.5em;
+    border-radius: 30px;
 }
 
-a:hover {
+nav a:hover,
+.jp-RenderedHTMLCommon nav a:hover {
     text-decoration: underline;
+    background-color: #dd7b8e;
 }
 
-a:visited {
+nav a:visited,
+.jp-RenderedHTMLCommon nav a:visited {
     text-decoration: none;
-    color: #aeaeff;
+    color: white;
+    background-color: #8a041f;
 }
 
 nav {
@@ -27,6 +37,10 @@ nav {
 li {
     margin-top: 2em;
     font-weight: bolder;
+}
+
+nav li {
+    list-style-type: none;
 }
 
 /* OVERRIDE JUPYTER NOTEBOOK STYLE */
